# NetworkScience-Seminar

./: .gitignore  README.md  pyproject.toml
03-random-networks/: barabasi_albert.html  random_network.ipynb  small_world_network.ipynb  watts_strogaz.html
07-degree-correlations/: 7.3 Measuring Degree Correlations.ipynb
EconomicNetworks/: 1_4 Graph-Theory.ipynb
NetworkScience/: README.md
NetworkScience/03-random-networks/: random_network.ipynb
NetworkScience/07-degree-correlations/: 7.3 Measuring Degree Correlations.ipynb
