[tool.poetry]
name = "netsci-seminar-2022"
version = "0.1.0"
description = ""
authors = ["Nagayu71 <yanyongyouxi71@gmail.com>"]
readme = "README.md"
packages = [{include = "netsci_seminar_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "2.8.7"
numpy = "1.23.4"
pandas = "1.5.1"
matplotlib = "3.6.1"
jupyterlab = "3.5.0"
japanize-matplotlib = "^1.1.3"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
